--- a/styles.css
+++ b/styles.css
@@ -7,21 +7,30 @@ html {
   box-sizing: inherit;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   line-height: 1.3;
-  font-family: 'Outfit', sans-serif;
-  font-size: .9375rem;  
+  font-family: 'Outfit', sans-serif;  
   background-color: hsl(212, 45%, 89%);
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
+main {
+  margin-bottom: 100px;
+}
 .container {
   background-color: hsl(0, 0%, 100%);
   width: 275px;
   height: 450px;
-  margin: 100px auto;
   border-radius: 20px;
   padding: 15px 18px;
 }
@@ -38,6 +47,16 @@ img {
   border-radius: 10px;
 }
 
+h1 {
+  font-weight: 700;
+  font-size: 1.3rem;
+}
+
+p {
+  font-weight: normal;
+  font-size: .9rem;
+}
+
 .attribution {
   font-size: 0.6875rem;
   text-align: center;
@@ -45,14 +64,4 @@ img {
 
 .attribution a {
   color: hsl(228, 45%, 44%);
-}
-
-
-.strong {
-  font-weight: 700;
-  font-size: 1.3rem;
-}
-
-.normal {
-  font-weight: normal;
 }
